<resources>
    <string name="app_name">Lottery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_sorting">Sorting</string>
    <string name="action_move_to_bottom">Bottom</string>
    <string name="action_move_to_top">Top</string>

    <string name="large_table">Large Table</string>
    <string name="small_table">Small Table</string>
    <string name="list_table">Table</string>

    <string name="init_hint">"Data set is empty, click me to download data"</string>

    <string name="menu_lto_hk">Lto HK</string>
    <string name="menu_lto">Lto</string>
    <string name="menu_lto_big">Lto Big</string>
    <string name="menu_lto_list3">Lto List3</string>
    <string name="menu_lto_list4">Lto List4</string>

    <string name="settings_category_log_title">Log</string>
    <string name="settings_preference_job_service_log_title">Job service</string>
    <string name="settings_preference_job_service_log_summary">Job service log</string>
    <string name="settings_preference_update_time_service_log_title">Update time service</string>
    <string name="settings_preference_update_time_service_log_summary">Update time service log</string>

    <string name="settings_category_data_title">Data</string>
    <string name="settings_preference_reset_all_data_title">Reset all data</string>
    <string name="settings_preference_reset_all_data_summary">Clear all lottery data and re-download it</string>
    <string name="settings_preference_update_all_data_title">Update all data</string>
    <string name="settings_clear_all_data_toast">Clear all data</string>
    <string name="settings_preference_clear_all_data_title">Clear all data</string>
    <string name="settings_category_ui_title">User interface</string>
    <string name="settings_preference_large_table_title">Large table text size</string>
    <string name="settings_preference_small_table_title">Small table text size</string>
    <string name="settings_preference_list_table_title">List table text size</string>
    <string name="settings_preference_landscape_mode_title">Always use landscape mode</string>

    <string-array name="sorting_array">
        <item>Order</item>
        <item>Combination</item>
        <item>End</item>
    </string-array>

    <string-array name="preference_table_text_size_list">
        <item>Extra small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>

    <string-array name="preference_table_text_size_option">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
