<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_data_title">
        <Preference
            android:key="key_reset_all_data"
            android:summary="@string/settings_preference_reset_all_data_summary"
            android:title="@string/settings_preference_reset_all_data_title" />

        <Preference
            android:key="key_update_all_data"
            android:title="@string/settings_preference_update_all_data_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_log_title">
        <Preference
            android:key="key_job_service_log"
            android:summary="@string/settings_preference_job_service_log_summary"
            android:title="@string/settings_preference_job_service_log_title" />

        <Preference
            android:key="key_update_time_service_log"
            android:summary="@string/settings_preference_update_time_service_log_summary"
            android:title="@string/settings_preference_update_time_service_log_title" />
    </PreferenceCategory>
</PreferenceScreen>