<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_move_to_top"
        android:orderInCategory="100"
        android:title="@string/action_move_to_top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move_to_bottom"
        android:orderInCategory="100"
        android:title="@string/action_move_to_bottom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sorting"
        android:orderInCategory="100"
        android:title="@string/action_sorting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
