<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_lto_hk">
        <menu>
            <item
                android:id="@+id/nav_lto_hk"
                android:icon="@drawable/ic_grid_black_24dp"
                android:title="@string/large_table" />
        </menu>
    </item>

    <item android:title="@string/menu_lto">
        <menu>
            <item
                android:id="@+id/nav_lto"
                android:icon="@drawable/ic_grid_black_24dp"
                android:title="@string/large_table" />
        </menu>
    </item>

    <item android:title="@string/menu_lto_big">
        <menu>
            <item
                android:id="@+id/nav_lto_big"
                android:icon="@drawable/ic_grid_black_24dp"
                android:title="@string/large_table" />
        </menu>
    </item>
</menu>
