<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lto_hk">

    <fragment
        android:id="@+id/nav_lto_hk"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.large_table.lto_hk.LtoHKFragment"
        android:label="@string/menu_lto_hk"
        tools:layout="@layout/fragment_large_table">
        <argument
            android:name="lto_type"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_lto_big"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.large_table.lto_big.LtoBigFragment"
        android:label="@string/menu_lto_big"
        tools:layout="@layout/fragment_large_table">
        <argument
            android:name="lto_type"
            android:defaultValue="1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_lto"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.large_table.lto.LtoFragment"
        android:label="@string/menu_lto"
        tools:layout="@layout/fragment_large_table">
        <argument
            android:name="lto_type"
            android:defaultValue="2"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_small_lto_hk"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.small_table.lto_hk.LtoHKFragment"
        android:label="@string/menu_lto_hk"
        tools:layout="@layout/fragment_small_table">
        <argument
            android:name="lto_type"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_small_lto_big"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.small_table.lto_big.LtoBigFragment"
        android:label="@string/menu_lto_big"
        tools:layout="@layout/fragment_small_table">
        <argument
            android:name="lto_type"
            android:defaultValue="1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_small_lto"
        android:name="bj4.dev.yhh.l.ui.activity.main.fragment.small_table.lto.LtoFragment"
        android:label="@string/menu_lto"
        tools:layout="@layout/fragment_small_table">
        <argument
            android:name="lto_type"
            android:defaultValue="2"
            app:argType="integer" />
    </fragment>
</navigation>